# Similarity_Search_Tool

./: .env  main.py  pyproject.toml  requirements.txt
